issue-1650 Introduce serde parameter support